<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.abamobile.empleodigital.trackingapp.design.activities.MainActivity"
        >

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:layout_alignParentTop="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo96"
                android:layout_marginLeft="80dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="15dp"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="25dp"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_logo"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">



            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_user"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_user"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_password"
            android:id="@+id/ll_olvidar"
            android:layout_marginTop="1dp"
            android:gravity="center">

            <Button
                android:id="@+id/bt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style_forget"
                android:onClick="onClick"
                android:text="@string/forget_my_data"
                android:textAllCaps="false"
                android:textColor="@color/colortext"
                android:textSize="12dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_olvidar"
            android:layout_marginTop="105dp"
            android:gravity="center"
            android:paddingBottom="25dp">

            <Button
                android:id="@+id/bt_clockIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/access_main"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
